# c-lang-examples

./: .gitignore
buffer-overflow-examples/: simple-buffer-overflow.c
byte-order-examples/: byte-order-test.c
defer/: Makefile  defer.c  defer.h  main.c
emulator/: .gitignore  CMakeLists.txt  env.sh  readme.md
emulator/docs/: chip-8-multithreaded-design.excalidraw
emulator/roms/: MAZE.dis-ok.txt  MAZE.hexdump.txt  PONG2.disassembly
emulator/scripts/: wasm-build.sh
emulator/src/emulator/: clock.c  clock.h  config.c  config.h  cpu.c  cpu.h  disassembler.c  disassembler.h  display.c  display.h  keyboard.c  keyboard.h  machine.c  machine.h  main.c  memory.c  memory.h  opcode.c  opcode.h  register.h  timer.c  timer.h
emulator/src/emulator/commons/: buffer.c  buffer.h
emulator/src/emulator/logging/: level.c  level.h  log.h  logger.c
emulator/src/emulator/utils/: bits.c  bits.h  fs.c  fs.h  general.h  math.h  random.c  random.h
glib-examples/cli/: meson.build
glib-examples/cli/src/: main.c
glib-examples/gobject-sandbox/: app-person.c  app-person.h  env.sh  foo.gjs  main.c
glib-examples/hello-gobject/: CMakeLists.txt
glib-examples/hello-gobject/src/: app-configuration.c  app-configuration.h  main.c
glib-examples/hello-goption/: main.c
hash-table/: Makefile  main.c
hello-scgi/: CMakeLists.txt  Dockerfile  docker-compose.debug.yml  docker-compose.yml
hello-scgi/nginx/: default.conf  nginx.conf
hello-scgi/scgi-backend/src/: main.c  mem.c  mem.h  net.c  net.h  scgi.c  scgi.h  strutils.c  strutils.h  test.c
libcurl/: hello-libcurl.c
networking/: basics.c  echo-server.c
networking/http-server/: .gitignore  CMakeLists.txt  env.sh  perf-notes.md  todo.md
networking/http-server/src/: config.c  config.h  dynamic-array.h  error.h  http.c  http.h  log.h  main.c  net.c  net.h  scanner.c  scanner.h  str.c  str.h
networking/http-server/src/http-server/: commons.c  commons.h  config.c  config.h  dynamic-array.h  error.h  http.c  http.h  io.c  io.h  main.c  net.c  net.h  scanner.c  scanner.h  stopwatch.c  stopwatch.h  str.c  str.h
networking/http-server/src/http-server/http/: method.c  method.h  parser.c  parser.h  server.c  server.h
parsing-example/: CONTRIBUTING.md  dev-requirements.txt  meson.build
parsing-example/aqls-parser/include/aqls-parser/: aqls-parser.h
parsing-example/aqls-parser/src/aqls-parser/: lexer.c  lexer.h  lexer.test.c  parser.c  parser.h  parser.test.c  string-view.c  string-view.h  utils.c  utils.h
parsing-example/aqls-parser/src/aqls-parser/ast/: ast.bak.c  ast.bak.h  ast.c  ast.h
parsing-example/aqls-parser/src/aqls-parser/token/: queue.c  queue.h  token.c  token.h
parsing-example/natural-parser/include/natural-parser/: natural-parser.h
parsing-example/natural-parser/src/natural-parser/: lexer.c  lexer.h  lexer.test.c  parser.c  parser.h  parser.test.c  string-view.c  string-view.h  utils.c  utils.h
parsing-example/natural-parser/src/natural-parser/ast/: ast.bak.c  ast.bak.h  ast.c  ast.h
parsing-example/natural-parser/src/natural-parser/token/: queue.c  queue.h  token.c  token.h
parsing-example/natural-parser/test/unit/fixtures/: hello-world.nsp
pthreads-examples/simple-example/: Makefile  main.c  thread_context.c  thread_context.h
string-examples/: unsafe-str-copy.c
zlib/: zlib-uncompress.c
